# floatnote

./: .gitignore  README.md  RELEASE_NOTES.md  index.html  package-lock.json  package.json
docs/: 窗口与全屏空间策略.md
src/: app.css  i18n.ts  main.ts  settings.ts  table-actions.ts  tokens.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: table-actions.test.ts
